--- a/juniorneorismicro/src/main/resources/application.properties
+++ b/juniorneorismicro/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=juniorneorismicro
+
+spring.datasource.url=jdbc:mysql://localhost:3306/neoris_micro
+spring.datasource.username=root
+spring.datasource.password=rootroot
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
