--- a/seniorneodevmicro/micro_account_tx/pom.xml
+++ b/seniorneodevmicro/micro_account_tx/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.job.micro.personclient</groupId>
-	<artifactId>micro_person_client</artifactId>
+	<groupId>com.job.micro.accounttx</groupId>
+	<artifactId>micro_account_tx</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>microAppPersonClient</name>
-	<description>Spring Boot Microservices Job - Person Client</description>
+	<name>microAppAccountTx</name>
+	<description>Spring Boot Microservices Job - Account Transaction</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
