--- a/seniorneodevmicro/micro_account_tx/pom.xml
+++ b/seniorneodevmicro/micro_account_tx/pom.xml
@@ -42,6 +42,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
