--- a/seniorneodevmicro/micro_account_tx/src/main/resources/application.properties
+++ b/seniorneodevmicro/micro_account_tx/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=microapppersonclient
+spring.application.name=microAppAccountTx
+
+server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/neodev_micro
 spring.datasource.username=root
