--- a/seniorneodevmicro/micro_person_client/src/main/resources/application.properties
+++ b/seniorneodevmicro/micro_person_client/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=microapppersonclient
 
+server.port=8080
+
 spring.datasource.url=jdbc:mysql://localhost:3306/neodev_micro
 spring.datasource.username=root
 spring.datasource.password=rootroot
