--- a/seniorneodevmicro/micro_account_tx/src/main/resources/application.properties
+++ b/seniorneodevmicro/micro_account_tx/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=microAppAccountTx
 
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/neodev_micro
+spring.datasource.url=jdbc:mysql://mysqldb:3306/neodev_micro
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
